[package]
name = "d3d12"
version = "0.4.1"
authors = [
	"msiglreith <m.siglreith@gmail.com>",
	"Dzmitry Malyshau <kvarkus@gmail.com>",
]
description = "Low level D3D12 API wrapper"
repository = "https://github.com/gfx-rs/d3d12-rs"
keywords = ["windows", "graphics"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/d3d12"
categories = ["api-bindings", "graphics", "memory-management", "os::windows-apis"]
edition = "2018"

[features]
implicit-link = []

[dependencies]
bitflags = "1"
libloading = { version = "0.7", optional = true }

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole_Automation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
